update logo and color pallete

--- a/excelapp/static/excelapp/css/_base.sass
+++ b/excelapp/static/excelapp/css/_base.sass
@@ -1,7 +1,7 @@
-$color-a: #EEEEEE
-$color-b: #00ADB5
-$color-c: #393E46
-$color-d: #222831
+$color-a: #FFFFFF
+$color-b: #D4DE26
+$color-c: #3CB448
+$color-d: #296d30
 
 * 
     font-family: 'Saira Condensed', sans-serif
