--- a/excelapp/templates/excelapp/login.html
+++ b/excelapp/templates/excelapp/login.html
@@ -14,7 +14,7 @@
 
         <label>
             User name
-            <input type="text" name="user" id="user" class="text-input" required placeholder="JohnSmith or ScheduleV-1-JohnSmith">
+            <input type="text" name="user" id="user" class="text-input" required placeholder="JohnSmith or JohnSmith1">
         </label>
         <label>
             Password
