--- a/excelapp/static/excelapp/css/_home.sass
+++ b/excelapp/static/excelapp/css/_home.sass
@@ -1,7 +1,28 @@
 main.home
     margin-top: 50px
-    object
+    
+    table
         width: 100%
-        height: 700px
-        margin: 0
-        padding: 0
+        min-width: 1000px
+        border-spacing: 0
+        border-collapse: collapse
+
+        th
+            background-color: rgba($color-c, 0.3)
+            height: 40px
+            font-size: 18px
+
+        tr
+            &:nth-child(even)
+                background-color: rgba($color-b, 0.2)
+
+            &.last:nth-child(even)
+                background-color: rgba($color-d, 0.2)
+
+
+            td
+                padding: 10px 2px
+                text-align: center
+
+                &:nth-child(1), &:nth-child(1)
+                    width: 110px
