--- a/excelapp/static/excelapp/css/style.css
+++ b/excelapp/static/excelapp/css/style.css
@@ -191,11 +191,29 @@ footer {
 main.home {
   margin-top: 50px;
 }
-main.home object {
+main.home table {
   width: 100%;
-  height: 700px;
-  margin: 0;
-  padding: 0;
+  min-width: 1000px;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+main.home table th {
+  background-color: rgba(60, 180, 72, 0.3);
+  height: 40px;
+  font-size: 18px;
+}
+main.home table tr:nth-child(even) {
+  background-color: rgba(212, 222, 38, 0.2);
+}
+main.home table tr.last:nth-child(even) {
+  background-color: rgba(41, 109, 48, 0.2);
+}
+main.home table tr td {
+  padding: 10px 2px;
+  text-align: center;
+}
+main.home table tr td:nth-child(1), main.home table tr td:nth-child(1) {
+  width: 110px;
 }
 
 .btn {
